hphp/test/zend/good/ext/sqlite3/tests/sqlite3_33_load_extension_param.php
<?php

$db = new SQLite3(':memory:');

try {
  $db->loadExtension("");
} catch (Extension $ex) {
  var_dump($ex->getMessage());
}

?>